deployment/01-carts-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sagdemo
  name: sagdemo
spec:
  replicas: 1
  minReadySeconds: 45
  selector:
    matchLabels:
      app: sagdemo
  template:
    metadata:
      labels:
        app: sagdemo
    spec:
      containers:
      - image: sttlab/sagdemo:0.0.2
        imagePullPolicy: IfNotPresent
        name: sagdemo
        terminationMessagePath: "/tmp/my-log"
        ports:
        - containerPort: 8080
