deployment/01-sagdemo-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sagdemo
  name: sagdemo
spec:
  replicas: 2
  minReadySeconds: 45
  selector:
    matchLabels:
      app: sagdemo
  template:
    metadata:
      labels:
        app: sagdemo
    spec:
      containers:
      - image: sttlab/sagdemo:latest
        imagePullPolicy: IfNotPresent
        name: sagdemo
        ports:
        - containerPort: 8080
