deployment/02-sagdemo-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sagdemo
  annotations:
  labels:
    name: sagdemo
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: sagdemo
