deployment/99-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sagdemo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sagdemo
            port:
              number: 80
